git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@363 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/proordenproduccion/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/proordenproduccion/startup.vm
@@ -49,7 +49,11 @@
         <!--Esta tabla va  en la barra de buscador -->
 		<table border="0" class="tabla_buscador" style="display:none">
 				<tr>
-                                    <td colspan="13">&nbsp;&nbsp;</td>
+                                    <!--
+                                    <td colspan="13">&nbsp;&nbsp;<input type="checkbox" name="chek1" id="chek1"/>
+                                    &nbsp;&nbsp;<input type="checkbox" name="chek2" id="chek2"/>
+                                    -->
+                                </td>
 				</tr>
                                 <tr>
                                     <td width=10>&nbsp;&nbsp;&nbsp;&nbsp;</td>
