--- a/erp-quimicos/src/main/webapp/vm/crmregistrocasos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/crmregistrocasos/startup.vm
@@ -37,26 +37,29 @@
         <!--Esta tabla va  en la barra de buscador -->
 		<table border="0" class="tabla_buscador" style="display:none">
 			<tr>
-				<td colspan="22">&nbsp;&nbsp;</td>
+				<td colspan="25">&nbsp;&nbsp;</td>
 			</tr>
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td >Folio</td>
-				<td width="20"></td>
-				<td >Tipo&nbsp;de&nbsp;Caso</td>
-				<td width="20"></td>
-				<td >Cliente / Prospecto</td>
+				<td >Folio:</td>
+				<td width="20">&nbsp;</td>
+				<td >Tipo&nbsp;de&nbsp;Caso:</td>
+				<td width="20">&nbsp;</td>
+				<td >Cliente / Prospecto:</td>
 				<td >&nbsp;</td>
 				<td >&nbsp;</td>
-				<td ></td>
+				<td >&nbsp;</td>
                                 <td >Prioridad:</td>
+                                <td width="35">&nbsp;</td>
+                                <td >Agentes:</td>
                                 <td >&nbsp;</td>
-                                <td ></td>
-				<td ></td>
-				<td colspan="3">Fecha&nbsp;de&nbsp;Cierre</td>
+                                <td width="35">&nbsp;</td>
+                                <td >&nbsp;</td>
+				<td >&nbsp;</td>
+				<td colspan="3">Fecha&nbsp;de&nbsp;Cierre:</td>
 				<td >&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td></td>
-				<td width="25"></td>
+				<td>&nbsp;</td>
+				<td width="25">&nbsp;</td>
 				<td width="10">&nbsp;&nbsp;&nbsp;</td>
 				<td width="10">&nbsp;</td>
 				<td width="10">&nbsp;&nbsp;&nbsp;</td>
@@ -65,15 +68,13 @@
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td ><input type="text" name="busqueda_folio" style="width:80px;"></td>
-				<td ></td>
+				<td >&nbsp;</td>
 				<td>
 					<select name="busqueda_tipo" style="width:100px;">
-						<option value="0" selected="yes">[-- Todos --]</option>
-						<option value="1">Cliente</option>
-						<option value="2">Prospecto</option>
+						
 					</select>
 				</td>
-				<td ></td>
+				<td >&nbsp;</td>
 				<td >
                                     <input type="text" name="busqueda_cliente_prospecto" style="width:300px;">
                                     <input type="hidden" name="busqueda_id_cliente_prospecto" value="0">
@@ -93,14 +94,18 @@
 
                                     </select>
                                 </td>
-                                <td >&nbsp;</td>
+                                <td width="35">&nbsp;</td>
+                                <td ><select name="busqueda_agente" style="width:200px;">
+						<option value="0" >[-- Selecionar Agente --]</option>
+					</select></td>
                                 <td ></td>
 
 
-				
+				<td width="35">&nbsp;</td>
 				<td ><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
+                                <td >&nbsp;</td>
 				<td ><input type="text" name="busqueda_fecha_cierre" style="width:90px;" readOnly="true"></td>
-				<td ></td>
+				<td >&nbsp;</td>
 				<td >&nbsp;</td>
 				<td >&nbsp;</td>
 				<td >&nbsp;&nbsp;&nbsp;&nbsp;</td>
@@ -213,7 +218,7 @@
                                                                 <td >&nbsp;</td>
                                                                 <td >Agente</td>
                                                                 <td >&nbsp;</td>
-                                                                <td colspan="6"><select name="select_agente" style="width:300px;"></select></td>
+                                                                <td colspan="6"><select name="select_agente" style="width:300px;" value="0"></select></td>
                                                                 <td >&nbsp;<div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_agente"></div></td>
                                                                
                                                                 <td >&nbsp;</a></td>
