git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@374 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/crmregistrocasos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/crmregistrocasos/startup.vm
@@ -243,7 +243,7 @@
                                                                 <td >Fecha</td>
                                                                 <td >&nbsp;</td>
                                                                 <td >
-                                                                     <input type="text" name="fecha_cierre" style="width:100px;">
+                                                                     <input type="text" name="fecha_cierre" style="width:100px;" readOnly="true">
                                                                 </td>
                                                                 <td ><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_fecha_cierre"></div></td>
                                                                 <td >&nbsp;</td>
