--- a/erp-quimicos/src/main/webapp/vm/cotizaciones/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/cotizaciones/startup.vm
@@ -90,13 +90,6 @@
         </table>
 
 
-
-
-
-
-
-
-
         <!--form for cotizaciones -->
         <form id="formaCotizacions00" action="edit.json" method="POST" >
         <!--clase la quite por causar problemas      tabulador -->
@@ -106,7 +99,7 @@
                 
                     <div id="div_two" title="" class="cotizacions_div_two">
                         <div class="columns on-2">
-                            <div class="fixed column" style="width:873px; padding-left:6px;"><strong>Cotizaciones</strong></div>
+                            <div class="fixed column" style="width:1040px; padding-left:6px;"><strong>Cotizaciones</strong></div>
                             <div class="fixed column" style="width:20px; height:25px;">
                                 <div id="close" style="height:25px;background-image:url('../../img/modalbox/close.png'); background-color:; background-position:top; cursor:pointer; background-repeat:no-repeat;"></div>
                             </div>
@@ -125,10 +118,7 @@
                         <div class="columns" style="background:#731F6C;">
                             <div class="container" style="background:white;">
                                 <div class="fixed column" class="content_x" >
-
                                     <div id="tabx-1" class="contenidoPes" >
-
-
                                         <table border="0" style="margin:0; padding:0;">
                                                 <tr>
                                                     <td width="520"></td>
@@ -155,25 +145,25 @@
                                                                 <td width="20"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_rfccliente"></div></td>
                                                                 <td width="150"><a  href="busca_cliente">(Buscar cliente)</a></td>
                                                             </tr>
-                                                            <tr><td colspan="8" height="5"></td></tr>
+                                                            <tr><td colspan="8" height="5">&nbsp;</td></tr>
                                                             <tr>
                                                                 <td width="10"></td>
                                                                 <td width="80">Razon social</td>
                                                                 <td colspan="6" width="430"><INPUT TYPE="text" name="razoncliente" style="width:430px;" readOnly="true"></td>
                                                             </tr>
-                                                            <tr><td colspan="8" height="5"></td></tr>
+                                                            <tr><td colspan="8" height="5">&nbsp;</td></tr>
                                                             <tr>
                                                                 <td width="10"></td>
                                                                 <td width="80">Direccion</td>
                                                                 <td colspan="6" width="430"><INPUT TYPE="text" name="dircliente" style="width:430px;" readOnly="true"></td>
                                                             </tr>
-                                                            <tr><td colspan="8" height="5"></td></tr>
+                                                            <tr><td colspan="8" height="5">&nbsp;</td></tr>
                                                             <tr>
                                                                 <td width="10"></td>
                                                                 <td width="80">Contacto</td>
                                                                 <td colspan="6" width="430"><INPUT TYPE="text" name="contactocliente" style="width:430px;" readOnly="true"></td>
                                                             </tr>
-                                                            <tr><td colspan="8" height="5"></td></tr>
+                                                            <tr><td colspan="8" height="5">&nbsp;</td></tr>
                                                             <tr>
                                                                 <td width="10"></td>
                                                                 <td width="80">Moneda</td>
@@ -190,13 +180,11 @@
                                                                 <td width="150"></td>
                                                             </tr>
                                                         </table>
-
                                                     </td>
-
                                                     <td width="10"></td>
                                                     <!--<td width="60"></td>-->
 
-                                                    <td width="350" colspan="2" valign="top" style="border: solid 1px #313E74;">
+                                                    <td width="200" colspan="2" valign="top" >
                                                         <table border="0">
                                                             <tr>
                                                                 <td width="10"></td>
@@ -205,24 +193,23 @@
                                                             </tr>
                                                             <tr>
                                                                 <td width="10"></td>
-                                                                <td width="330"><textarea name="observaciones" rows="7" cols="60" style="width:330px; resize:none;"></textarea></td>
+                                                                <td width="330"><textarea name="observaciones" rows="5" cols="15" style="width:360px; resize:none;"></textarea></td>
                                                                 <td width="10"></td>
                                                             </tr>
-
                                                         </table>
                                                     </td>
+                                                </tr>
+                                                <tr>
+                                                    <td coslpan="4">&nbsp;</td>
                                                 </tr>
                                                 
                                                 <tr>
                                                     <td colspan="4">
                                                         <table border="0">
-                                                            <tr><td colspan="10" height="8"></td></tr>
                                                             <tr>
-                                                                <!--
-                                                                <td width="10"></td>
-                                                                <td width="50">Almacen</td>
-                                                                <td width="145"><SELECT NAME="almacen" style="width:145px;"></SELECT></td>
-                                                                -->
+                                                                <td colspan="15" height="8"></td></tr>
+                                                            <tr>
+                                                                
                                                                 <td width="10"></td>
                                                                 <td width="70">Sku producto</td>
                                                                 <td width="125"><INPUT TYPE="text" name="sku_producto" style="width:120px;"></td>
@@ -231,7 +218,11 @@
                                                                 <td width="355"><INPUT TYPE="text" name="nombre_producto" style="width:350px;" readOnly="true"></td>
                                                                 <td width="60"><a  href="agregar_producto">(Agregar)</a></td>
                                                                 <td width="20"></td>
-                                                                <td width="135" align="right"><INPUT TYPE="button" id="genera_pdf" value="Generar PDF" style="font-weight: bold;"></td>
+                                                                <td width="90" colspan="1">Descripci&oacute;n Larga</td>
+                                                                <td width="20"></td>
+                                                                <td width="20"><INPUT TYPE="checkbox" name="descripcion_larga" value="false"></td>
+                                                                <td width="20"></td>
+                                                                <td width="135" align="right"><INPUT TYPE="button" id="genera_pdf" value="Generar PDF" style="font-weight: bold;width:120px;"></td>
                                                             </tr>
                                                         </table>
                                                     </td>
@@ -239,37 +230,25 @@
 
                                                 <tr>
                                                     <td colspan="4" align="left"  style="border: solid 1px #313E74;">
-                                                        <div style="width:880px; height:172px; overflow:scroll; overflow-x: auto; overflow-y: auto;">
+                                                        <div style="width:1040px; height:140px; overflow:scroll; overflow-x: auto; overflow-y: auto;">
                                                             <table border="0">
                                                                 <tr style="background-color:#A8A9AB; font-weight: bold;">
-                                                                    <td width="60" id="td_eliminar" style="border: solid 1px #313E74;"><div class="delete">&nbsp;#</div></td>
-                                                                    <td width="90" id="td_sku" style="border: solid 1px #313E74;">&nbsp;Sku</td>
-                                                                    <td width="200" id="td_nombre" style="border: solid 1px #313E74;">&nbsp;Nombre</td>
-                                                                    <td width="90" style="border: solid 1px #313E74;">&nbsp;Unidad</td>
-                                                                    <td width="110" style="border: solid 1px #313E74;">&nbsp;Presentacion</td>
-                                                                    <td width="80" style="border: solid 1px #313E74;">&nbsp;Cantidad</td>
-                                                                    <td width="85" style="border: solid 1px #313E74;">&nbsp;Precio unitario</td>
-                                                                    <td width="50" style="border: solid 1px #313E74;">&nbsp;Moneda</td>
-                                                                    <td width="111" style="border: solid 1px #313E74;">&nbsp;Importe</td>
-                                                                    <!--<td width="70" style="border: solid 1px #313E74;">&nbsp;Disponibles</td>-->
+                                                                    <td width="37" id="td_eliminar" style="border: solid 1px #313E74;"><div class="delete">&nbsp;#</div></td>
+                                                                    <td width="83" id="td_sku" style="border: solid 1px #313E74;">&nbsp;Sku</td>
+                                                                    <td width="178" id="td_nombre" style="border: solid 1px #313E74;">&nbsp;Nombre</td>
+                                                                    <td width="80" style="border: solid 1px #313E74;">&nbsp;Unidad</td>
+                                                                    <td width="180" id="td_descripcion" style="border:solid 1px #313E74;">&nbsp;Descripcion</td>
+                                                                    <td width="103" style="border: solid 1px #313E74;">&nbsp;Presentacion</td>
+                                                                    <td width="73" style="border: solid 1px #313E74;">&nbsp;Cantidad</td>
+                                                                    <td width="80" style="border: solid 1px #313E74;">&nbsp;Precio unitario</td>
+                                                                    <td width="45" style="border: solid 1px #313E74;">&nbsp;Moneda</td>
+                                                                    <td width="90" style="border: solid 1px #313E74;">&nbsp;Importe</td>
                                                                 </tr>
                                                                 <tr style="background-color:#ffffff;">
-                                                                    <td colspan="9" align="left">
-                                                                        <div align="left" style="width:879px; height:145px; overflow:scroll; overflow-x:auto; overflow-y:auto;">
+                                                                    <td colspan="10" align="left">
+                                                                        <div align="left" style="width:1020px; height:135px; overflow:scroll; overflow-x:auto; overflow-y:auto;">
                                                                             <table border="0" id="grid_productos" >
-                                                                                <!--
-                                                                                <tr>
-                                                                                        <td width="60"><a href="elimina_producto" id="delete">Eliminar</a></td>
-                                                                                        <td width="121"><INPUT TYPE="text" name="sku" value="dedededede ed ed ed ed ed ed ed edfffr" id="skuprod" class="borde_oculto" readOnly="true" style="width:117px;"></td>
-                                                                                        <td width="201"><INPUT TYPE="text" name="nombre" value="fgfg g f gf g rggtgtg tgtgtgtg gtgtg gtg tgt gt gt" id="nom" class="borde_oculto" readOnly="true" style="width:196px;"></td>
-                                                                                        <td width="101"><INPUT TYPE="text" name="unidad" value="Kilogramo ekdekdned edekefjefef" id="uni" class="borde_oculto" readOnly="true" style="width:96px;"></td>
-                                                                                        <td width="121"><INPUT TYPE="text" name="alm_orig" value="Este es un almacen de origen" id="cant" class="borde_oculto" readOnly="true" style="width:116px;"></td>
-                                                                                        <td width="81"><INPUT TYPE="text" name="cantidad" value="" id="cant" style="width:76px;"></td>
-                                                                                        <td width="81"><INPUT TYPE="text" name="costo" value="" id="cost" style="width:76px;"></td>
-                                                                                        <td width="112"><INPUT TYPE="text" name="importe" value="" id="import" readOnly="true" style="width:106px;"></td>
-                                                                                        <td width="48"><INPUT TYPE="text" name="disponible" value="" id="disp" readOnly="true" style="width:48px;"></td>
-                                                                                </tr>
-                                                                                -->
+                                                                                <!--Se genera el grid de los productos -->
                                                                             </table>
                                                                         </div>
                                                                     </td>
@@ -301,7 +280,7 @@
                                                                 <tr>
                                                                     <td width="10"></td>
                                                                     <td colspan="5"> 
-                                                                        <div align="left" style="width:600px; height:68px; overflow:scroll; overflow-x: auto; overflow-y: auto; color:#d41000;">
+                                                                        <div align="left" style="width:600px; height:60px; overflow:scroll; overflow-x: auto; overflow-y: auto; color:#d41000;">
                                                                             <table id="grid_warning" border="0" style="width:575px;"">
                                                                                 <!-- Aqui se muestran los warning
                                                                                 style="background-color:#e7e8ea;"
@@ -348,21 +327,21 @@
                             </div>
 
 
-                            <div class="fixed column" style="width:886px; background:; text-align:right; padding-left:; position:absolute;margin-top:4px;">
+                            <div class="fixed column" style="width:1150px; background:; text-align:right; padding-left:; position:absolute;margin-top:4px;">
                                 <!--
                                 <input type="image" src="../../img/modalbox/btn1.png" id="submit"/>
                                 <div id="boton_cancelar" style="width:95px; height:34px; float:right; cursor:pointer; background-image:url('../../img/modalbox/btn2.png'); background-repeat:no-repeat;"></div>
                                 -->
-								<table border="0">
-									<tr>
-										<td width="886"></td>
-										<td>
-											<input type="image" src="../../img/modalbox/btn1.png" id="submit" style="width:77px; height:24px;"/>
-										</td>
-										<td width="30"></td>
-										<td><div id="boton_cancelar" style="width:77px; height:24px; float:right; cursor:pointer; background-image:url('../../img/modalbox/btn2.png'); background-repeat:no-repeat;"></div></td>
-									</tr>
-								</table>
+                                <table border="0">
+                                        <tr>
+                                                <td width="886"></td>
+                                                <td>
+                                                        <input type="image" src="../../img/modalbox/btn1.png" id="submit" style="width:77px; height:24px;"/>
+                                                </td>
+                                                <td width="30"></td>
+                                                <td><div id="boton_cancelar" style="width:77px; height:24px; float:right; cursor:pointer; background-image:url('../../img/modalbox/btn2.png'); background-repeat:no-repeat;"></div></td>
+                                        </tr>
+                                </table>
                             </div>
                             
                         </div>
