--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -480,6 +480,12 @@
                                                                                                         <li class="topline"><a href="../crmregistrocasos/startup.agnux">Registro de Casos</a></li>
 												</ul>
 											</li>
+                                                                                        <li>
+                                                                                            <a href="#" class="sub">Cansultas&raquo;</a>
+                                                                                            <ul>
+                                                                                                <li class ="topline"><a href="../crmconsultas/startup.agnux">Consultas</li>
+                                                                                            </ul>
+                                                                                        </li>
 										</ul>
 									</li>
 									
